# test-task

./: CMakeLists.txt  README.md  cashier.cpp  cashier.hpp  database.cpp  database.hpp  main.cpp  product.hpp  products.json  receipt.cpp  receipt.hpp  rmk.cpp  rmk.hpp  test_cashier.cpp  test_receipt.cpp
tests/: test_database.cpp
